--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -12,42 +12,27 @@
   align-items: left;
 }
 
-.back{
-    background-image: url(../../assets/images/architecture-buildings-cars-129830.jpg);
-    background-size: cover;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    background-position: center;
+
     
     
-}    
+   
 
 .btn{
     --color:white;
-    --background: #f8f8f880;
+    --background: rgb(0, 140, 255);
     --background-activated: blue;
-    --background-hover: #f8f8f880;;
+    --background-hover: rgba(121, 62, 62, 0.658);
 }
 
-ion-content {
-    --background: auto;
-}
+
 
 h1{
     font-size: 35px;
     z-index: 100000000;
-    color:#fff;
+    
     
 }
 
-.over-lay{
-    width:100%;
-    height:100%;  
-    backdrop-filter: opacity(.8)
-}
 .myLink{
     text-decoration: none;
 }
