--- a/src/app/sign-up/sign-up.page.html
+++ b/src/app/sign-up/sign-up.page.html
@@ -1,8 +1,8 @@
 <ion-content padding>
 
   <ion-grid>
-    <ion-row justify-content-center>
-      <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+    <ion-row class="justify-content-center">
+      <ion-col class="align-self-center" size-md="6" size-lg="5" size-xs="12">
         <div text-center class="myPads1">
           <img src="../../assets/images/soft.png" style="widows: 180px;">
           <span>
