Remove sidemenu from rootcomponent

--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -30,5 +30,7 @@ Change Password
 <ion-input type="password"></ion-input>
 </ion-item>
   </ion-list>
+  <ion-button fill="solid" expand="block" color="primary" type="submit" > Change of account details
+    </ion-button>
   
 </ion-content>
