--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,3 @@
-<ion-app>
-    <ion-menu side="start" menuId="first" contentId="content1">
-        <div class="logo-section">
-          <div class="logo-section_wrapper">
-            <img class="logo-section__logo" src="../assets/images/profile.png">
-            <h3 class="logo-section__title">Ernest Ohene Asase</h3>
-          </div>
-        </div>
-        <ion-content>
-          <ion-list *ngFor="let pages of navigate">
-          <ion-menu-toggle auto-hide="true">
-            <ion-item [routerLink]="pages.url" routerDirection="forward">
-                <ion-icon [name]="pages.icon" slot="start"></ion-icon>
-                   {{pages.title}} 
-            </ion-item>
-          </ion-menu-toggle>
-          </ion-list>
-        </ion-content>
-      </ion-menu>
-  <ion-router-outlet id="content1"></ion-router-outlet>
+
   
-</ion-app>
+  <ion-router-outlet></ion-router-outlet>
