--- a/src/app/trip/trip.page.html
+++ b/src/app/trip/trip.page.html
@@ -1,5 +1,6 @@
 <ion-header>
   <ion-toolbar>
+    <ion-title> Trip History </ion-title>
       <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
       </ion-buttons>
@@ -7,4 +8,26 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  	<ion-list *ngFor="let item of info; let i = index" class="accordion-list" lines="none" detail="false" no-padding>
+        <ion-item tappable (click)="toggleSection(i)" [ngClass]="{'section-active':item.open,'section':!item.open}">
+          <ion-icon slot="start" name="arrow-forward" *ngIf="!item.open"></ion-icon>
+          <ion-icon slot="start" name="arrow-down" *ngIf="item.open"></ion-icon>
+          {{item.question}}
+        </ion-item>
+        <div *ngIf="item.answer && item.open" padding class="inner">
+          <p>{{item.answer}}</p>
+         <p>{{item.answer1}}</p>
+         <p>{{item.answer2}}</p>
+         <p>{{item.answer3}}</p>
+         <p>{{item.answer10}}</p>
+         <p>{{item.answer11}}</p>
+         <p>{{item.answer12}}</p>
+        
+        </div>
+      </ion-list>
+
+
+
+
+</ion-content>
